WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30339
Visibility:visible inside a compositing layer doesn't make the element visible
https://bugs.webkit.org/show_bug.cgi?id=30339
Summary
Visibility:visible inside a compositing layer doesn't make the element visible
Simon Fraser (smfr)
Reported
2009-10-13 14:29:57 PDT
Created
attachment 41127
[details]
Testcase The testcase shows an issue where visibility:visible doesn't correctly defeat the visibility:hidden on an ancestor, if that ancestor also has a 3d transform.
Attachments
Testcase
(1.77 KB, text/html)
2009-10-13 14:29 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(6.24 KB, patch)
2009-10-13 15:36 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-10-13 15:01:19 PDT
Opacity plays a role here too.
Simon Fraser (smfr)
Comment 2
2009-10-13 15:36:14 PDT
Created
attachment 41134
[details]
Patch
Simon Fraser (smfr)
Comment 3
2009-10-13 15:54:10 PDT
http://trac.webkit.org/changeset/49520
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug