2009-10-13  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        Visibility:visible inside a compositing layer doesn't make the element visible
        https://bugs.webkit.org/show_bug.cgi?id=30339

        When deciding if a layer had any renderable content, RenderLayerBacking::paintIntoLayer()
        only consulted hasVisibleContent(), which does not take into a account child layers which
        may be visible. We also have to consult hasVisibleDescendant() as well.

        Test: compositing/compositing-visible-descendant.html

        * rendering/RenderLayer.h:
        (WebCore::RenderLayer::hasVisibleDescendant):
        * rendering/RenderLayerBacking.cpp:
        (WebCore::RenderLayerBacking::paintIntoLayer):

Canonical link: https://commits.webkit.org/41009@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49520 268f45cc-cd09-0410-ab3c-d52691b4dbfc